Add missing </a> from previous patch.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -1008,7 +1008,7 @@ pseudo op that's needed for full C++ exception functionality.
 
 As NeXT's assembler is a derived work from GNU as, a free  
 replacement that does can be obtained at 
-<a href="ftp://ftp.next.peak.org:/next-ftp/next/apps/devtools/as.3.3.NIHS.s.tar.gz"> ftp://ftp.next.peak.org:/next-ftp/next/apps/devtools/as.3.3.NIHS.s.tar.gz.
+<a href="ftp://ftp.next.peak.org:/next-ftp/next/apps/devtools/as.3.3.NIHS.s.tar.gz">ftp://ftp.next.peak.org:/next-ftp/next/apps/devtools/as.3.3.NIHS.s.tar.gz</a>.
 
 <hr>
 
