Add news item concerning test results database.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -1,4 +1,4 @@
-<html>
+yg<html>
 <head>
 <title>egcs project home page</title>
 </head>
@@ -37,6 +37,12 @@ href="egcs-1.1/egcs-1.1.html"> egcs-1.1</a> is the current release.
 <h2>NEWS/ANNOUNCEMENTS</h2>
 
 <dl>
+<dt><b>November 26, 1998</b></dt>
+<dd>
+A <a href="http://www.gcc.ml.org/testsuite/">database with test results</a>
+is now available online, thanks to Marc Lehmann.
+</dd>
+
 <dt><b>November 21, 1998</b></dt>
 <dd>
 <a href="http://www.cygnus.com/">Cygnus</a> donates support for the SH4
@@ -132,7 +138,7 @@ which all contributions must meet.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on November 21, 1998.</i>
+<i>Last modified on November 26, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
