Update for new mailing lists.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -6,9 +6,24 @@
 <h1 align="center">egcs project mailing lists</h1>
 
 
-<p>The egcs project has several mailing lists which may be of interest
-to users and developers.  All the lists are under majordomo control 
-with an open subscription and post policy.
+<p>We are in the process of moving all mailing list functions from the Cygnus
+mailserver to the egcs machine.
+
+<p>This conversion has three key benefits for the
+egcs project.
+<ol>  
+  <li> The delay between the time a message is posted to a
+  list and the time it arrives at its final destination should be significantly
+  reduced.
+  <li> We will be able to put in anti-spam filters on our lists without
+  effecting Cygnus's mailserver.
+  <li> More of the list functions will be automated.
+</ol>
+
+<p>Please read the subscribe/unsubscribe instructions carefully.  They may
+have changed since you last visited this page.  They may also be different
+for certain lists as we move the lists to the egcs machine.
+
 
 <ul>
   <li><b><a href="http://www.cygnus.com/ml/egcs-announce/">egcs-announce</a></b>
@@ -31,20 +46,35 @@ with an open subscription and post policy.
   <li><b><a href="http://www.cygnus.com/ml/egcs-cvs/">egcs-cvs</a></b>
   is a read-only, relatively high volume list which tracks checkins to the
   egcs CVS repository.
+
+  <li><b><a href="http://www.cygnus.com/ml/egcs-testresults/">
+  egcs-testresults</a></b> is a moderate volume list where test results for
+  the egcs compilers are posted.  Note, there are no list archives for this
+  list (yet).
 </ul>
-  
-<p>To post a message, just send mail to <i>listname</i><tt>@cygnus.com</tt>.
-Please refrain from sending messages in HTML, RTF or similiar formats.
+ 
+<a name="msgsize"></a>
+<p>All the lists have a maximum message size.  If your message exceeds more than
+40kbytes, you should compress any attachments before sending it to the list.
 
 <p>When posting messages, please select an appropriate list for the message
 and try to avoid cross posting a message to several lists.
 
-<a name="msgsize"></a>
-<p>All the lists have a 40 kilobyte maximum message size.  If your message
-is more than 40kbytes, you might try compressing any attachments.  If it
-is still more than 40kbytes, then you should put the attachments on a
-web or ftp server somewhere and note the location of the attachment in
-your message.
+<p>Web archives for all mailing lists are on-line;
+<a href="http://www.cygnus.com/ml/egcs/">egcs</a>,
+<a href="http://www.cygnus.com/ml/egcs-announce/">egcs-announce</a>,
+and
+<a href="http://www.cygnus.com/ml/egcs-bugs/">egcs-bugs</a>,
+<a href="http://www.cygnus.com/ml/egcs-cvs/">egcs-cvs</a>,
+<a href="http://www.cygnus.com/ml/egcs-patches/">egcs-patches</a>.
+
+<p>Unfortunately the web archives are not searchable.  We hope to replace
+Hypermail with another archiving engine with search capabilities in the
+future.
+
+<h2> egcs, egcs-bugs, egcs-patches and egcs-announce</h2>
+<p>To post a message, just send mail to <i>listname</i><tt>@cygnus.com</tt>.
+Please refrain from sending messages in HTML, RTF or similiar formats.
 
 <p>To subscribe to a list, send mail to
 <i>listname</i><tt>-request@cygnus.com</tt> with a message body consisting of
@@ -63,17 +93,19 @@ to 48 hours after submission to the list.  As a result it may take a 24-48
 hours after you subscribe before messages begin to flow, similarly it may
 take 24-48 after you unsubscribe before the messages stop.
 
-<p>Web archives for all three mailing lists are on-line;
-<a href="http://www.cygnus.com/ml/egcs/">egcs</a>,
-<a href="http://www.cygnus.com/ml/egcs-announce/">egcs-announce</a>,
-and
-<a href="http://www.cygnus.com/ml/egcs-bugs/">egcs-bugs</a>,
-<a href="http://www.cygnus.com/ml/egcs-cvs/">egcs-cvs</a>,
-<a href="http://www.cygnus.com/ml/egcs-patches/">egcs-patches</a>.
+<h2> egcs-cvs and egcs-testresults </h2>
+<p>These lists are run from the new list server on egcs.cygnus.com and thus
+work a little differently than the other lists.
 
-<p>Unfortunately the web archives are not searchable.  We hope to replace
-Hypermail with another archiving engine with search capabilities in the
-future.
+<p>To post a message, just send mail to <i>listname</i><tt>@egcs.cygnus.com</tt>.
+Please refrain from sending messages in HTML, RTF or similiar formats.
+
+
+<p>To subscribe to a list, send mail to
+<i>listname</i><tt>-subscribe@egcs.cygnus.com</tt> No message body is required.
+
+<p>To unsubscribe, send a mail note to 
+<i>listname</i><tt>-unsubscribe@cygnus.com</tt> No message body is required.
 
 
 <hr>
@@ -81,7 +113,8 @@ future.
 
 <hr>
 <a name="glimpsebox"></a>
-<p><i>Last modified:  November  8, 1998</i>
+
+<p><i>Last modified:  November 27, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
