Updates from Dave Love and Robert Lipe.

--- a/htdocs/egcs-1.1/egcs-1.1.1.html
+++ b/htdocs/egcs-1.1/egcs-1.1.1.html
@@ -21,7 +21,7 @@ serious problems in egcs-1.1.
   <ul>
     <li> Avoid some stack overflows when compiling large functions.
     <li> Avoid incorrect loop invariant code motions.
-    <li> Fix some core dumps on linux kernel code.
+    <li> Fix some core dumps on Linux kernel code.
     <li> Bring back the imake -Di386 and friends fix from egcs-1.0.2.
     <li> Fix code generation problem in gcse.
     <li> Various documentation related fixes.
@@ -36,21 +36,22 @@ serious problems in egcs-1.1.
   <li> g77 and libf2c improvements and fixes
   <ul>
     <li> Various documentation fixes.
-    <li> Return type for RAND fixed.
-    <li> Minor bugs makefiles exposed by BSD make programs.
-    <li> Define _XOPEN_SOURCE for libI77 build.
+    <li> Avoid compiler crash on RAND intrinsic.
+    <li> Fix minor bugs in makefiles exposed by BSD make programs.
+    <li> Define _XOPEN_SOURCE for libI77 build to avoid potential
+         problems on some 64-bit systems.
     <li> Fix problem with implicit endfile on rewind.
     <li> Fix spurious recursive I/O errors.
   </ul>
   <li> platform specific improvements and fixes
   <ul>
-    <li> Match all versions of Unixware7.
-    <li> Do not assume x86 svr4 or unixware targets can handle stabs
+    <li> Match all versions of UnixWare7.
+    <li> Do not assume x86 SVR4 or UnixWare targets can handle stabs
     <li> Fix PPC/RS6000 LEGITIMIZE_ADDRESS macro and bug in conversion
     from unsigned ints to double precision floats.
     <li> Fix ARM ABI issue with NetBSD.
     <li> Fix a few arm code generation bugs.
-    <li> Fixincludes will fix more broken SCO header files.
+    <li> Fixincludes will fix additional broken SCO OpenServer header files.
     <li> Fix a m68k backend bug which caused invalid offsets in reg+d addresses.
     <li> Fix problems with 64bit AIX 4.3 support.
     <li> Fix handling of long longs for varargs/stdarg functions on the ppc.
@@ -62,7 +63,7 @@ serious problems in egcs-1.1.
     <li> Fix Windows handling of TREE_SYMBOL_REFERENCED.
     <li> Fix x86 compiler abort in reg-stack pass.
     <li> Fix cygwin/windows problem with section attributes.
-    <li> Fix alpha code generation problem exposed by SMP linux kernels.
+    <li> Fix alpha code generation problem exposed by SMP Linux kernels.
     <li> Fix typo in m68k 32->64bit integer conversion.
     <li> Make sure target libraries build with -fPIC for ppc & alpha targets.
   </ul>
