Update and move Octave entry.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -27,6 +27,7 @@ comp.std.c++ FAQ</a>.
   <li><a href="#broken">Problems with code that works with other compilers or earlier gcc releases</a>
   <ul>
     <li><a href="#fdzero">FD_ZERO macro</a>
+    <li><a href="#octave">Octave 2.0.13 does not compile</a>
   </ul>
   <li><a href="#asmclobber">Problems with <tt>Invalid `asm' statement</tt>s</a>
   <li><a href="#hpcompare">Bootstrap comparison failures on HPs</a>
@@ -57,7 +58,6 @@ comp.std.c++ FAQ</a>.
   <li><a href="#axparch">Assembler errors on Alpha targets</a>
   <li><a href="#sig11">Signal 11 on Linux</a>
   <li><a href="#bigtoc">Link failures using -bbigtoc on AIX 4.1</a>
-  <li><a href="#octave">Octave does not compile</a>
   <li><a href="spam.html">Dealing with spam on the lists</a>
   <li><a href="#testoptions">How do I pass flags like
          <code>-fnew-abi</code> to the testsuite?</a>
@@ -359,6 +359,11 @@ been identified:
     } while (0)
 </PRE>
 
+  <li><a name="octave">Octave 2.0.13 does not compile</a></h2>
+  <p>Apparently Octave 2.0.13 uses some C++ features which have been
+  obsoleted and thus fails to build with egcs-1.1 and later. This <a
+  href="http://www.che.wisc.edu/octave/mailing-lists/bug-octave/1998/270">patch
+  to Octave</a> should fix this.
 </ul>
 
 <hr>
@@ -902,10 +907,6 @@ available from IBM Customer Support and from its
 <a href="http://service.boulder.ibm.com/">service.boulder.ibm.com</a>
 website as PTF U455193.
 
-<hr>
-<h2><a name="octave">Octave does not compile</a></h2>
-<p>Apparently Octave uses some C++ features which have been obsoleted.  This
-<a href="http://www.che.wisc.edu/octave/mailing-lists/bug-octave/1998/270">patch to Octave</a> should fix the compilation problems.
 
 <hr>
 <h2><a name="testoptions">How do I pass flags like
@@ -1030,7 +1031,7 @@ replacement that does can be obtained at
 <hr>
 
 <p><a href="index.html">Return to the EGCS home page</a>
-<p><i>Last modified:  November 27, 1998</i>
+<p><i>Last modified:  December  1, 1998</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
