--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -61,8 +61,8 @@ of the snapshots are mirrored here.
 <UL>
 <LI><A HREF="ftp://ftp.goof.com/pub/pcg/egcs/">US: Goof.COM</A>, thanks to <A HREF="http://www.goof.com/~mmead">Matthew C. Mead</A>!<BR>
 <LI><A HREF="ftp://mirror.aarnet.edu.au/pub/pcg/egcs/">AUSTRALIA: aarnet.edu</A>, thanks to <A HREF="mailto:<mirror@mirror.aarnet.edu.au>">Paul Young / Jason Andrade</A>!<BR>
-<LI><A HREF="ftp://linux.colba.net/pub/pcg/egcs/">CANADA: linux.colba.net (Montreal)</A>, thanks to <A HREF="mailto:draggy@kosmic.org">Nicolas St-Pierre</A>!<BR>
-<LI><A HREF="ftp://ftp.lab.kdd.co.jp/agnu/pcg/egcs/">JAPAN: ftp.lab.kdd.co.jp (Saitama)</A>, thanks to <A HREF="mailto:hotta@lab.kdd.co.jp">Takao Hotta</A>!<BR>
+<!-- <LI><A HREF="ftp://linux.colba.net/pub/pcg/egcs/">CANADA: linux.colba.net (Montreal)</A>, thanks to <A HREF="mailto:draggy@kosmic.org">Nicolas St-Pierre</A>!<BR> -->
+<!-- <LI><A HREF="ftp://ftp.lab.kdd.co.jp/agnu/pcg/egcs/">JAPAN: ftp.lab.kdd.co.jp (Saitama)</A>, thanks to <A HREF="mailto:hotta@lab.kdd.co.jp">Takao Hotta</A>!<BR> -->
 <LI><A HREF="ftp://euler.mat.univ.szczecin.pl/pub/Linux/pgcc/egcs/">POLAND: euler.mat.univ.szczecin.pl</A>, thanks to <A HREF="mailto:mkorz@euler.mat.univ.szczecin.pl">Marcin Korzonek</A>!<BR>
 <LI><A HREF="ftp://ftp.fu-berlin.de/unix/languages/pgcc/egcs/">GERMANY: ftp.fu-berlin.de (FU Berlin)</A>, thanks to <A HREF="mailto:leitner@math.fu-berlin.de">Felix von Leitner</A>!<BR>
 <LI><A HREF="ftp://ftp.pmi.saitama-med.ac.jp/pub/pcg/egcs/">JAPAN: ftp.pmi.saitama-med.ac.jp</A>, thanks to <A HREF="mailto:raraki@saitama-med.ac.jp">Ryuichiro Araki</A>!<BR>
@@ -70,7 +70,7 @@ of the snapshots are mirrored here.
 <LI><A HREF="ftp://ftp.hitachi-sk.co.jp/pub/pentium-gcc/egcs/">JAPAN: ftp.hitachi-sk.co.jp (Hitachi-Soft)</A>, thanks to <A HREF="mailto:miya@aqu.hitachi-sk.co.jp">Yasuki Miyazaki</A>!<BR>
 <LI><A HREF="ftp://linux.cis.nctu.edu.tw/pub/packages/pcg/egcs/">TAIWAN: linux.cis.nctu.edu.tw</A>, thanks to <A HREF="http://www.cis.nctu.edu.tw/~is83120/">Aiken Sam</A>!<BR>
 <LI><A HREF="ftp://ftp.maisel.int-evry.fr/pub/linux/pentium/egcs/">FRANCE: ftp.minet.net (MINET)</A>, thanks to <A HREF="http://www-eleves.int-evry.fr/~tharan">Olivier Tharan</A>!<BR>
-<LI><A HREF="ftp://sunsite.ms.mff.cuni.cz/GNU/pgcc/egcs/">CZECH REPUBLIC: SunSITE</A>, thanks to <A HREF="mailto:jj@sunsite.mff.cuni.cz">Jakub Jelinek</A>!<BR>
+<!-- <LI><A HREF="ftp://sunsite.ms.mff.cuni.cz/GNU/pgcc/egcs/">CZECH REPUBLIC: SunSITE</A>, thanks to <A HREF="mailto:jj@sunsite.mff.cuni.cz">Jakub Jelinek</A>!<BR> -->
 </UL>
 
 <p>If you wish to host a new mirror site, please contact
