One Linux -> GNU/Linux change.

--- a/htdocs/egcs-1.1/egcs-1.1.1.html
+++ b/htdocs/egcs-1.1/egcs-1.1.1.html
@@ -34,7 +34,7 @@ serious problems in egcs-1.1.
     <li> Fix a bug that would fail to run destructors in some cases with -O2.
     <li> Fix 'new' of classes with virtual bases.
     <li> Fix crash building Qt on the Alpha.
-    <li> Fix failure compiling WIFEXITED macro on Linux.
+    <li> Fix failure compiling WIFEXITED macro on GNU/Linux.
     <li> Fix some -frepo failures.
 
   </ul>
