More caps fixes.

--- a/htdocs/egcs-1.1/egcs-1.1.1.html
+++ b/htdocs/egcs-1.1/egcs-1.1.1.html
@@ -68,9 +68,9 @@ serious problems in egcs-1.1.
     <li> Fix Windows handling of TREE_SYMBOL_REFERENCED.
     <li> Fix x86 compiler abort in reg-stack pass.
     <li> Fix cygwin/windows problem with section attributes.
-    <li> Fix alpha code generation problem exposed by SMP Linux kernels.
+    <li> Fix Alpha code generation problem exposed by SMP Linux kernels.
     <li> Fix typo in m68k 32->64bit integer conversion.
-    <li> Make sure target libraries build with -fPIC for ppc & alpha targets.
+    <li> Make sure target libraries build with -fPIC for PPC & Alpha targets.
   </ul>
 </ul>
 
