Temporarily disable stanford mirror

--- a/htdocs/egcs-1.1/egcs-1.1.1.html
+++ b/htdocs/egcs-1.1/egcs-1.1.1.html
@@ -104,9 +104,9 @@ egcs successful.
 <p><a href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
 Download egcs-1.1.1
 from egcs.cygnus.com (USA California)</a>
-<p><a href="ftp://go.cygnus.com/pub/ftp.cygnus.com/egcs/releases/index.html">
+<!-- <p><a href="ftp://go.cygnus.com/pub/ftp.cygnus.com/egcs/releases/index.html">
 Download egcs-1.1.1 from go.cygnus.com (USA California -- High speed link
-provided by Stanford)</a>
+provided by Stanford)</a> -->
 <p><a href="ftp://cambridge.cygnus.com/pub/egcs/releases/index.html">
 Download egcs-1.1.1
 from cambridge.cygnus.com (USA Massachusetts)</a>
