egcs-1.1.1 is the current release.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -28,7 +28,7 @@ ultimate inclusion into the gcc2 tree.
 <p>We will provide regular, high quality <a
 href="#releases">releases</a>. We want those releases to work well on
 a variety of native (including linux) and cross targets.  <a
-href="egcs-1.1/egcs-1.1.html"> egcs-1.1</a> is the current release.
+href="egcs-1.1/egcs-1.1.1.html"> egcs-1.1.1</a> is the current release.
 
 <p>egcs is pronounced "eggs", the c is silent.
 <hr>
@@ -37,6 +37,11 @@ href="egcs-1.1/egcs-1.1.html"> egcs-1.1</a> is the current release.
 <h2>NEWS/ANNOUNCEMENTS</h2>
 
 <dl>
+<dt><b>December 4, 1998</b></dt>
+<dd>
+<a href="egcs-1.1/egcs-1.1.1.html"><b>egcs-1.1.1 is released</b></a>.
+</dd>
+
 <dt><b>November 26, 1998</b></dt>
 <dd>
 A <a href="http://www.gcc.ml.org/testsuite/">database with test results</a>
