Uncap section titles. Remove extra <hr>.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -34,7 +34,7 @@ href="egcs-1.1/egcs-1.1.1.html"> egcs-1.1.1</a> is the current release.
 <hr>
 
 
-<h2>NEWS/ANNOUNCEMENTS</h2>
+<h2>News/Announcements</h2>
 
 <dl>
 <dt><b>December 4, 1998</b></dt>
@@ -87,13 +87,13 @@ optimization</a> support.
 <p>Got questions about egcs?  Here is <a href="faq.html">our attempt at
 answering some of them</a>.  We'll add more later.
 
-<h2>MAILING LISTS</h2>
+<h2>Mailing Lists</h2>
 
 <p>Want to read about egcs development or post messages to the egcs
 lists?  All the information you need to access the <a href="lists.html">
 mailing lists </a> can be found here. 
 
-<h2><a name=snapshots>SNAPSHOTS</a></h2>
+<h2><a name=snapshots>Snapshots</a></h2>
 
 <p>Snapshots are generated weekly and put up for ftp.  If you are going
 to mess with snapshots, you should definitely be subscribed to the
@@ -114,26 +114,25 @@ sent to the egcs list.
 <p>Using a snapshot before it's officially made available is an unwise thing
 to do since it may become impossible to update to an official snapshot.
 
-<h2><a name="releases">RELEASES</a></h2>
+<h2><a name="releases">Releases</a></h2>
 
 <p>Releases are available from <a
 href="ftp://egcs.cygnus.com/pub/egcs/releases/index.html">
 egcs.cygnus.com:/pub/egcs/releases</a>.
 
-<h2><a name="mirrors">MIRROR LISTS</a></h2>
+<h2><a name="mirrors">Mirror Sites</a></h2>
 
-<p> Several sites around the world mirror our FTP server.  When downloading
+<p>Several sites around the world mirror our FTP server.  When downloading
 release or snapshots, please try to select an appropriate 
 <a href="mirrors.html"> mirror site</a>. 
 
-<h2><a name="thanks">ACKNOWLEDGEMENTS</a></h2>
+<h2><a name="thanks">Acknowledgements</a></h2>
 
 <p> No project of this size can be successful without contributions from
 numerous folks.  We have compiled a <a href="thanks.html"> partial list of
 contributors.</a>
 
-<hr>
-<h2><a name="contributions">CONTRIBUTIONS</a></h2>
+<h2><a name="contributions">Contributions</a></h2>
 <p>We encourage contributions of code, bugfixes, new optimizations, new
 features, documentation updates, web page improvements, etc.
 
@@ -143,7 +142,7 @@ which all contributions must meet.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on November 26, 1998.</i>
+<i>Last modified on December  5, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
