--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -72,7 +72,7 @@ and
 Hypermail with another archiving engine with search capabilities in the
 future.
 
-<h2> egcs, egcs-bugs, egcs-patches</h2>
+<h2> egcs-bugs, egcs-patches</h2>
 <p>To post a message, just send mail to <i>listname</i><tt>@cygnus.com</tt>.
 Please refrain from sending messages in HTML, RTF or similiar formats.
 
@@ -93,7 +93,7 @@ to 48 hours after submission to the list.  As a result it may take a 24-48
 hours after you subscribe before messages begin to flow, similarly it may
 take 24-48 after you unsubscribe before the messages stop.
 
-<h2> egcs-cvs, egcs-testresults and egcs-announce</h2>
+<h2> egcs, egcs-cvs, egcs-testresults and egcs-announce</h2>
 <p>These lists are run from the new list server on egcs.cygnus.com and thus
 work a little differently than the other lists.
 
