--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -12,7 +12,7 @@ egcs.cygnus.com server is in California in the US.  Please let us know
 if you are mirroring the egcs pages so we can note it here!
 
 <ul>
-<!-- <li>US (Stanford): <a href="ftp://go.cygnus.com/pub/ftp.cygnus.com/egcs/">go.cygnus.com</a> -->
+<li>US (Stanford): <a href="ftp://go.cygnus.com/pub/ftp.cygnus.com/egcs/">go.cygnus.com</a>
 <li>US (east coast): <a href="ftp://ftp.goof.com/pub/pcg/egcs/">ftp.goof.com</a>
 <li>US (east coast, releases only): <a href="ftp://cambridge.cygnus.com/pub/egcs/">cambridge.cygnus.com</a>
 <li>US (Arizona): <a href="ftp://ftp.ninemoons.com/pub/mirrors/egcs/">ftp.ninemoons.com</a>
