--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -49,6 +49,8 @@ thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
 <li>Japan (Tokoy): <a href="ftp://ring.so-net.ne.jp/pub/lang/egcs">ring.so-net.ne.jp</a>
 <li>Japan (Tokyo): <a href="ftp://ring.nacsis.ac.jp/pub/lang/egcs">ring.nacsis.ac.jp</a>
 <li>Japan: <a href="ftp://ftp.eos.hokudai.ac.jp/pub/egcs">ftp.eos.hokudai.ac.jp</a>
+<li>Japan: <a href="ftp://ftp.shonan.bunkyo.ac.jp/pub/lang/egcs">ftp.shonan.bunkyo.ac.jp</a>
+<li>South Africa: <a href="ftp://ftp.sun.ac.za/sites/sourceware.cygnus.com/pub">ftp.sun.ac.za</a>
 
 <!-- <LI>Taejon, Korea: <A HREF="ftp://cair-archive.kaist.ac.kr/pub/gnu/egcs">cair-archive.kaist.ac.kr</a>, thanks to <a href="mailto:ahmls@nmsvr.chosun.com">Ho-sun Lee</a>! -->
 <li>Finland: <a href="ftp://ftp.funet.fi/mirrors/ftp.cygnus.com/pub/egcs">ftp.funet.fi</a>
