--- a/htdocs/thanks.html
+++ b/htdocs/thanks.html
@@ -113,6 +113,7 @@ particular order.
   way, including the haifa bug which was killing the Alpha & PowerPC Linux
   kernels.
   <li> Philippe De Muyter for his work on the m68k port.
+  <li> Nathan Myers for his work on libstdc++-v3.
   <li> Pieter Nagel
   <li> Hans-Peter Nilsson for various documentation fixes and other
 small fixes.
@@ -134,8 +135,8 @@ small fixes.
   <li> Graham S. for various infrastructure improvements.
   <li> Jay Sachs
   <li> Juha Sarlin for improvements to the H8 code generator.
-  <li> Bernd Schmidt for various code generation improvements and the first
-  step towards a new reload pass.
+  <li> Bernd Schmidt for various code generation improvements and major
+  work in the reload pass.
   <li> Franz Sirl for his ongoing work with making the PPC port stable
   for linux.
   <li> Joel Sherrill for his direction via the steering committee, RTEMS
