( 	* build.html: Add documentation for `--enable-languages=...'. 	* configure.html: Likewise.

--- a/htdocs/install/build.html
+++ b/htdocs/install/build.html
@@ -42,6 +42,13 @@ without debugging information with "make CFLAGS='-O' LIBCFLAGS='-g
 roughly 40% of disk space both for the bootstrap and the final installation.
 (Libraries will still contain debugging information.)
 
+<p>If you used the flag <tt>--enable-languages=...</tt> to restrict
+the compilers to be built, only those you've actually enabled will be
+built. This will of course only build those runtime libraries, for
+which the particular compiler has been built.  Please note,
+that re-defining LANGUAGES when calling <tt>make bootstrap</tt>
+<b>*does not*</b> work anymore!
+
 <p><b>Building a cross compiler</b>
 
 <p> We recommend reading the
@@ -67,7 +74,7 @@ following steps:
 
 <p>
 <hr>
-<i>Last modified on August 15, 1998.</i>
+<i>Last modified on Dec  6, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
