Add news item for demangling of HP aCC symbols.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -37,9 +37,17 @@ href="egcs-1.1/egcs-1.1.1.html"> egcs-1.1.1</a> is the current release.
 <h2>News/Announcements</h2>
 
 <dl>
+
+<dt><b>December 7, 1998</b></dt>
+<dd>
+
+<a href="egcs-1.1/egcs-1.1.1.html"><b>egcs-1.1.1 is released</b></a>.
+</dd>
+
 <dt><b>December 4, 1998</b></dt>
 <dd>
-<a href="egcs-1.1/egcs-1.1.1.html"><b>egcs-1.1.1 is released</b></a>.
+<a href="http://www.cygnus.com/">Cygnus</a> donates support for demangling of
+HP aCC symbols.
 </dd>
 
 <dt><b>November 26, 1998</b></dt>
@@ -142,7 +150,7 @@ which all contributions must meet.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on December  5, 1998.</i>
+<i>Last modified on December  7, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
