Ulrich Drepper's fixed FD_ZERO macro is for glibc 2.0.

--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -321,10 +321,11 @@ following problems with some releases of widely used packages have
 been identified:
 
 <ul>
-  <li><strong><a name="fdzero">FD_ZERO macro</a></strong>
-  <p>The FD_ZERO macro in (e.g.) libc-5.4.46 is incorrect. It uses
-  <a href="#asmclobber">invalid asm clobbers</a>. The following rewrite
-  by Ulrich Drepper &lt;drepper@cygnus.com&gt; should fix this:
+  <li><strong><a name="fdzero">FD_ZERO macro</a></strong> <p>The
+  FD_ZERO macro in (e.g.) libc-5.4.46 is incorrect. It uses <a
+  href="#asmclobber">invalid asm clobbers</a>. The following rewrite
+  by Ulrich Drepper &lt;drepper@cygnus.com&gt; should fix this for
+  glibc 2.0:
 
 <PRE>
   # define __FD_ZERO(fdsetp) \
