--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -57,6 +57,7 @@ thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
 <li>Canada: <a href="ftp://ftp.crc.ca/pub/packages/egcs">ftp.crc.ca</a>
 <li>Russia: <a href="ftp://ftp.nc.orc.ru/pub/egcs">ftp.nc.orc.ru</a>
 <li>Russia (Moscow, no snapshots): <a href="ftp://linux.ihep.su/pub/cygnus/egcs">linux.ihep.su</a>
+<li>Hsin-Chu, Taiwan: <a href="ftp://ftp.cis.nctu.edu.tw/GNU/egcs">ftp.cis.nctu.edu.tw</a>, thanks to <a href="mailto:help@cis.nctu.edu.tw"> Henry Shieh</a>.
 </ul>
 
 <p>These sites are mirroring <tt>ftp.goof.com</tt>'s site, so we get to mooch
