--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -84,7 +84,7 @@ Please refrain from sending messages in HTML, RTF or similiar formats.
 <i>listname</i><tt>-subscribe@egcs.cygnus.com</tt> No message body is required.
 
 <p>To unsubscribe, send a mail note to 
-<i>listname</i><tt>-unsubscribe@cygnus.com</tt> No message body is required.
+<i>listname</i><tt>-unsubscribe@egcs.cygnus.com</tt> No message body is required.
 
 <h2> egcs-bugs, egcs-patches</h2>
 <p>To post a message, just send mail to <i>listname</i><tt>@cygnus.com</tt>.
