--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -15,6 +15,7 @@ if you are mirroring the egcs pages so we can note it here!
 <li>US (Stanford): <a href="ftp://go.cygnus.com/pub/ftp.cygnus.com/egcs/">go.cygnus.com</a>
 <li>US (east coast): <a href="ftp://ftp.goof.com/pub/pcg/egcs/">ftp.goof.com</a>
 <li>US (east coast, releases only): <a href="ftp://cambridge.cygnus.com/pub/egcs/">cambridge.cygnus.com</a>
+<li>US (California): <a href="ftp://ftp.yggdrasil.com/mirrors/site/egcs.cygnus.com/pub/egcs">ftp.yggdrasil.com</a>
 <li>US (Arizona): <a href="ftp://ftp.ninemoons.com/pub/mirrors/egcs/">ftp.ninemoons.com</a>
 <li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/egcs.cygnus.com/pub/egcs/">sunsite.doc.ic.ac.uk</a>
 <li>UK: <a href="ftp://unix.hensa.ac.uk/mirrors/egcs.cygnus.com/pub/egcs/">unix.hensa.ac.uk</a>
@@ -89,7 +90,7 @@ where the mirror is located.
 
 <hr>
 <a name="glimpsebox"></a>
-<i>Last modified on October 22, 1998.</i>
+<i>Last modified on December 13, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
