Another UK mirror.  Several more Japan mirrors.

--- a/htdocs/mirrors.html
+++ b/htdocs/mirrors.html
@@ -19,6 +19,7 @@ if you are mirroring the egcs pages so we can note it here!
 <li>US (Arizona): <a href="ftp://ftp.ninemoons.com/pub/mirrors/egcs/">ftp.ninemoons.com</a>
 <li>UK: <a href="ftp://sunsite.doc.ic.ac.uk/Mirrors/egcs.cygnus.com/pub/egcs/">sunsite.doc.ic.ac.uk</a>
 <li>UK: <a href="ftp://unix.hensa.ac.uk/mirrors/egcs.cygnus.com/pub/egcs/">unix.hensa.ac.uk</a>
+<li>UK: <a href="ftp://sunsite.org.uk/Mirrors/sourcware.cygnus.com/pub/egcs/">sunsite.org.uk</a>
 <li>Austria: <a href="ftp://gd.tuwien.ac.at/gnu/egcs/">gd.tuwien.ac.at</a>
 <li>France: <a href="ftp://ftp.ilog.fr/pub/Mirrors/egcs/">ftp.ilog.fr</a>
 <li>France: <a href="ftp://ftp.lip6.fr/pub/egcs/">ftp.lip6.fr</a>
@@ -46,9 +47,17 @@ thanks to <a href="mailto:ktroulos@noc.ntua.gr">Costas Troulos</a>.
 <li>Japan: <a href="ftp://ftp.telewaynet.ad.jp/pub/lang/egcs">ftp.telewaynet.ad.jp</a>
 <li>Japan: <a href="ftp://ftp.lab.kdd.co.jp/lang/egcs">ftp.lab.kdd.co.jp</a>
 <li>Japan (Ibaraki): <a href="ftp://ring.aist.go.jp/pub/lang/egcs">ring.aist.go.jp</a>
+<li>Japan: <a href="ftp://ring.etl.go.jp/pub/lang/egcs">ring.etl.go.jp</a>
 <li>Japan (Tokyo): <a href="ftp://ring.asahi-net.or.jp/pub/lang/egcs">ring.asahi-net.or.jp</a>
-<li>Japan (Tokoy): <a href="ftp://ring.so-net.ne.jp/pub/lang/egcs">ring.so-net.ne.jp</a>
-<li>Japan (Tokyo): <a href="ftp://ring.nacsis.ac.jp/pub/lang/egcs">ring.nacsis.ac.jp</a>
+<li>Japan: <a href="ftp://ring.crl.go.jp/pub/lang/egcs">ring.crl.go.jp</a>
+<li>Japan (Tokyo): <a href="ftp://ring.so-net.ne.jp/pub/lang/egcs">ring.so-net.ne.jp</a>
+<li>Japan: <a href="ftp://ring.jah.ne.jp/pub/lang/egcs">ring.jah.ne.jp</a>
+<li>Japan: <a href="ftp://ring.astem.or.jp/pub/lang/egcs">ring.astem.or.jp</a>
+<li>Japan: <a href="ftp://ring.saitama-u.ac.jp/pub/lang/egcs">ring.saitama-u.ac.jp</a>
+<li>Japan: <a href="ftp://ring.nacsis.ac.jp/pub/lang/egcs">ring.nacsis.ac.jp</a>
+<li>Japan: <a href="ftp://ring.exp.fujixerox.co.jp/pub/lang/egcs">ring.exp.fujixerox.co.jp</a>
+<li>Japan: <a href="ftp://ring.ip-kyoto.ad.jp/pub/lang/egcs">ring.ip-kyoto.ad.jp</a>
+<li>Japan: <a href="ftp://sysg.kek.jp/cygnus/egcs">sysg.kek.jp</a>
 <li>Japan: <a href="ftp://ftp.eos.hokudai.ac.jp/pub/egcs">ftp.eos.hokudai.ac.jp</a>
 <li>Japan: <a href="ftp://ftp.shonan.bunkyo.ac.jp/pub/lang/egcs">ftp.shonan.bunkyo.ac.jp</a>
 <li>South Africa: <a href="ftp://ftp.sun.ac.za/sites/sourceware.cygnus.com/pub">ftp.sun.ac.za</a>
