--- a/htdocs/faq.html
+++ b/htdocs/faq.html
@@ -233,7 +233,7 @@ href="mailto:egcs-bugs@cygnus.com">egcs-bugs@cygnus.com</a> including:
 output of the command, and the resulting `<tt><i>your-file</i>.i</tt>' for C,
 or `<tt><i>your-file</i>.ii</tt>' for C++, corresponding to:
 
-<p><tt>egcs -v --save-temps <i>all-your-options</i> <i>your-file</i>.c</tt>
+<p><tt>gcc -v --save-temps <i>all-your-options</i> <i>your-file</i>.c</tt>
 
 <p>Typically the CPP output will be large, so please compress the resulting
 file with one of the popular compression programs such as <tt>gzip</tt>,
