Remove superflous remainder of some previous patch.

--- a/htdocs/install/specific.html
+++ b/htdocs/install/specific.html
@@ -50,8 +50,8 @@ command like this:
 
 <p>
 <code>
-BLAH BLAH BLAH FINISH THIS
-	CC=/udk/usr/ccs/bin/cc CFLAGS=-O /play/egcs/configure --host=i686-pc-udk --target=i686-pc-udk --exec-prefix=udk-
+CC=/udk/usr/ccs/bin/cc CFLAGS=-O /play/egcs/configure
+--host=i686-pc-udk --target=i686-pc-udk --exec-prefix=udk-
 </code>
 
 <p> You should follow this with a 'make bootstrap'.  After you do a
