--- a/htdocs/egcs-1.1/buildstat.html
+++ b/htdocs/egcs-1.1/buildstat.html
@@ -32,6 +32,9 @@ Successful
 <p><b>hppa1.1-hp-hpux10.20</b><br>
 Successful
 
+<p><b>hppa1.1-hp-hpux11.00</b><br>
+Successful
+
 <p><b>i386-pc-solaris2.6</b><br>
 Successful
 
@@ -119,7 +122,7 @@ Successful
 
 <hr>
 <p>
-<i>Last modified on November 21, 1998.</i>
+<i>Last modified on December 22, 1998.</i>
 
 <!--#include virtual="/glimpsebox.html"-->
 </body>
